--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,4 +4,10 @@ header {
   position: fixed;
   z-index: 2;
   width: 100%;
-  text-align: center; }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  height: 70px;
+  padding: 0.5rem; }
