--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,3 +11,13 @@ header {
   font-size: 1.5rem;
   height: 70px;
   padding: 0.5rem; }
+
+.search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 2rem;
+  width: 100%; }
+  .search form {
+    margin-top: 10vh; }
