--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,12 +1,14 @@
 @import 'config';
+@import 'utilities';
 
 .App {
-
+    height:100%;
+    margin: 0;
 }
 
 header {
-    background:$primary-color;
-    color:set-text-color($primary-color);
+    background:$dark-color;
+    color:set-text-color($dark-color);
     position: fixed;
     z-index: 2;
     width: 100%;
@@ -21,17 +23,30 @@ header {
 
 
 .main {
-
+    width: 100%;
+    padding: 4rem;
 }
 
 .search {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 2rem;
-    width: 100%;
-    form {
-        margin-top: 10vh;
+    form { 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding:2rem;
+        .search-input {
+            width:50%;
+            padding: 0.3rem;
+            margin-right: 0.5rem;
+            font-size:1rem;
+        }
+        .search-button {
+            width:20%;
+        }
     }
+}
+
+.movies {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr)
 }
